now we collect all emojis to new attribute

--- a/bot/config_template.json
+++ b/bot/config_template.json
@@ -1,6 +1,7 @@
 {
     "id": 111111,
     "token": "bot token",
+    "proxy_on": true,
     "proxy": {
         "https": "socks5://login:pass@host:port"
     },
