--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2019.11.28
 chardet==3.0.4
 DAWG-Python==0.7.2
 docopt==0.6.2
+emoji==0.5.4
 gast==0.2.2
 google-auth==1.11.0
 google-auth-oauthlib==0.4.1
@@ -31,6 +32,7 @@ pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
 pyTelegramBotAPI==3.6.7
 PyYAML==5.3
+regex==2020.1.8
 requests==2.22.0
 requests-oauthlib==1.3.0
 rnnmorph==0.4.0
