--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 absl-py==0.9.0
 astor==0.8.1
+beautifulsoup4==4.8.2
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
+cycler==0.10.0
 DAWG-Python==0.7.2
 docopt==0.6.2
 emoji==0.5.4
@@ -18,11 +20,15 @@ jsonpickle==1.2
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+lxml==4.5.0
 Markdown==3.1.1
+matplotlib==3.1.3
 nltk==3.4.5
 numpy==1.18.1
 oauthlib==3.1.0
 opt-einsum==3.1.0
+Pillow==7.0.0
 protobuf==3.11.2
 pyaes==1.6.1
 pyasn1==0.4.8
@@ -30,7 +36,9 @@ pyasn1-modules==0.2.8
 pymongo==3.10.1
 pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
+pyparsing==2.4.6
 pyTelegramBotAPI==3.6.7
+python-dateutil==2.8.1
 PyYAML==5.3
 regex==2020.1.8
 requests==2.22.0
@@ -41,6 +49,7 @@ russian-tagsets==0.6
 scikit-learn==0.22.1
 scipy==1.4.1
 six==1.14.0
+soupsieve==1.9.5
 Telethon==1.10.10
 tensorboard==2.1.0
 tensorflow==2.1.0
@@ -49,4 +58,5 @@ termcolor==1.1.0
 tqdm==4.42.0
 urllib3==1.25.8
 Werkzeug==0.16.1
+wordcloud==1.6.0
 wrapt==1.11.2
